chore: 🤖 upgrade to java 17
Upgraded to java 17. Migrated all java beans to record, removed superCsv
as it does not support records, removed bean-tester as it became
unnecessary.

✅ Closes: 1712